k8s/job-aggregator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-aggregator
  namespace: job-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-aggregator
  template:
    metadata:
      labels:
        app: job-aggregator
    spec:
      containers:
        - name: job-aggregator
          image: job-aggregator:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: job-aggregator
  namespace: job-monitoring
  labels:
    app: job-aggregator
spec:
  selector:
    app: job-aggregator
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
